cpp/zad1/error_log.txt
main.cpp: In function ‘int main()’:
main.cpp:12:45: error: expected ‘)’ before ‘{’ token
   12 |                 while(getline(pliczek,linia){
      |                      ~                      ^
      |                                             )
